# avt_vimba_camera

./: README.md  configure.sh  requirements.sh
avt_vimba_camera/: CMakeLists.txt  package.xml
avt_vimba_camera/config/: params.yaml
avt_vimba_camera/include/VimbaCPP/Source/: .Frame.cpp.swp
avt_vimba_camera/include/avt_vimba_camera/: .avt_vimba_camera.hpp.swp  avt_vimba_camera.hpp  mono_camera_node.hpp
avt_vimba_camera/include/can/: cansender.cpp  cansender.hpp
avt_vimba_camera/include/cluster/: cluster.cpp  cluster.hpp
avt_vimba_camera/include/dummy_inference/: darknet.cpp  darknet_inference.cpp  darknet_inference.hpp  dummy_inference.hpp  yolov7.cpp  yolov7.hpp
avt_vimba_camera/include/dummy_inference/include/yolov7/: CMakeLists.txt  Makefile
avt_vimba_camera/include/dummy_inference/include/yolov7/include/: inference.h
avt_vimba_camera/include/dummy_inference/include/yolov7/src/: inference.cpp
avt_vimba_camera/include/imageselection/: imageselection.cpp  imageselection.hpp
avt_vimba_camera/include/inference/: inference.cpp  inference.hpp
avt_vimba_camera/include/inference/darknet/: Makefile
avt_vimba_camera/include/objectdetection/: objectdetection.hpp
avt_vimba_camera/include/objectdetection/darknet/: Makefile  darknet
avt_vimba_camera/include/pcan/: ObjectDetectionsSender.cpp  ObjectDetectionsSender.hpp
avt_vimba_camera/launch/: computing_node.py  mono_camera.launch.xml  slot_monitor1_launch.py  slot_monitor2_launch.py  slot_monitor3_launch.py  slot_monitor_launch.py
avt_vimba_camera/src/: .avt_vimba_camera.cpp.swp  .mono_camera_node.cpp.swp  avt_vimba_camera.cpp  mono_camera_node.cpp
